add sodium during compile

--- a/roles/php/templates/options.sh.j2
+++ b/roles/php/templates/options.sh.j2
@@ -35,12 +35,12 @@ configoptions="\
 --with-libdir=/lib \
 --enable-ftp \
 --with-imap \
---with-imap-ssl=
 --with-imap-ssl=/opt/openssl \
 --with-kerberos \
 --with-gettext \
 --with-xmlrpc \
 --with-xsl \
+--with-sodium \
 --enable-fpm \
 --enable-intl \
 $configoptions"
