--- a/roles/php/templates/php.ini-by-version.j2
+++ b/roles/php/templates/php.ini-by-version.j2
@@ -1,23 +1,35 @@
+error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
+display_errors = Off
+display_startup_errors = Off
+track_errors = Off
+mysqlnd.collect_memory_statistics = Off
+zend.assertions = -1
+upload_max_filesize=64M
+expose_php=Off
+date.timezone=Europe/Berlin
+
+opcache.enable=0
+
+
 session.save_path=/opt/phpfarm/inst/sessions/{{ php.version }}
 
 {% if php.version is version_compare('5.5', ">=") %}
-zend_extension=opcache.so
-opcache.enable=1
-opcache.max_accelerated_files=130987
-opcache.memory_consumption=192
-;opcache.interned_strings_buffer=8
-;opcache.revalidate_freq=60
-;opcache.fast_shutdown=1
-;opcache.enable_cli=1
+    zend_extension=opcache.so
+
+
+    opcache.enable=1
+    opcache.max_accelerated_files=130987
+    opcache.memory_consumption=192
+
+    ;opcache.interned_strings_buffer=8
+    ;opcache.revalidate_freq=60
+    ;opcache.fast_shutdown=1
+    ;opcache.enable_cli=1
 {% endif %}
 
 {% for module in php.modules %}
-    {% if module.name == 'xdebug' %}
-zend_extension={{ module.name }}.so
-xdebug.remote_enable=1
-xdebug.remote_host=127.0.0.1
-xdebug.remote_port=9000
-    {% else %}
+    {# skip xdebug #}
+    {% if module.name != 'xdebug' %}
 extension={{ module.name }}.so
     {% endif %}
 {% endfor %}
